users controller with swagger docs
