# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -14,6 +15,13 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:api')->get('/user', function (Request $request) {
-    return $request->user();
+Route::middleware('auth:api')->group(function (){
+
 });
+
+Route::apiResource('users', UserController::class);
+// Route::get('/users', [UserController::class, 'get']);
+// Route::get('/users/{id}', [UserController::class, 'show']);
+// Route::patch('/users', [UserController::class, 'update']);
+// Route::delete('/users', [UserController::class, 'destroy']);
+// Route::post('/users', [UserController::class, 'store']);
